<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewDialogTitle"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:text="@string/random_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupWorkoutType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardio_name"
            android:textSize="20sp"
            android:tag="0" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strong_name"
            android:textSize="20sp"
            android:tag="1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/streiching_name"
            android:textSize="20sp"
            android:tag="2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balet_name"
            android:textSize="20sp"
            android:tag="3" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextDuration"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_marginTop="8dp"
        android:hint="@string/duration_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonGenerate"
        android:layout_width="226dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/generate_button_text"
        android:textSize="20sp" />
</LinearLayout>